Source/WebKit/chromium/tests/CCLayerTreeHostImplTest.cpp
@@ -60,6 +60,8 @@ public:
     {
         CCSettings settings;
         m_hostImpl = CCLayerTreeHostImpl::create(settings, this);
+        m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
+        m_hostImpl->setViewportSize(IntSize(10, 10));
     }
 
     virtual void didLoseContextOnImplThread() OVERRIDE { }
@@ -255,8 +257,6 @@ TEST_F(CCLayerTreeHostImplTest, nonFastScrollableRegionBasic)
 
 TEST_F(CCLayerTreeHostImplTest, nonFastScrollableRegionWithOffset)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-
     OwnPtr<CCLayerImpl> root = CCLayerImpl::create(0);
     root->setScrollable(true);
     root->setScrollPosition(IntPoint(0, 0));
@@ -441,49 +441,51 @@ private:
 
 TEST_F(CCLayerTreeHostImplTest, didDrawNotCalledOnHiddenLayer)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-
-    // Ensure visibleLayerRect for root layer is empty
-    m_hostImpl->setViewportSize(IntSize(0, 0));
-
+    // The root layer is always drawn, so run this test on a child layer that
+    // will be masked out by the root layer's bounds.
     m_hostImpl->setRootLayer(DidDrawCheckLayer::create(0));
     DidDrawCheckLayer* root = static_cast<DidDrawCheckLayer*>(m_hostImpl->rootLayer());
+    root->setMasksToBounds(true);
+
+    root->addChild(DidDrawCheckLayer::create(1));
+    DidDrawCheckLayer* layer = static_cast<DidDrawCheckLayer*>(root->children()[0].get());
+    // Ensure visibleLayerRect for layer is empty
+    layer->setPosition(FloatPoint(100, 100));
+    layer->setBounds(IntSize(10, 10));
+    layer->setContentBounds(IntSize(10, 10));
 
     CCLayerTreeHostImpl::FrameData frame;
 
-    EXPECT_FALSE(root->willDrawCalled());
-    EXPECT_FALSE(root->didDrawCalled());
+    EXPECT_FALSE(layer->willDrawCalled());
+    EXPECT_FALSE(layer->didDrawCalled());
 
     EXPECT_TRUE(m_hostImpl->prepareToDraw(frame));
     m_hostImpl->drawLayers(frame);
     m_hostImpl->didDrawAllLayers(frame);
 
-    EXPECT_FALSE(root->willDrawCalled());
-    EXPECT_FALSE(root->didDrawCalled());
+    EXPECT_FALSE(layer->willDrawCalled());
+    EXPECT_FALSE(layer->didDrawCalled());
 
-    EXPECT_TRUE(root->visibleLayerRect().isEmpty());
+    EXPECT_TRUE(layer->visibleLayerRect().isEmpty());
 
-    // Ensure visibleLayerRect for root layer is not empty
-    m_hostImpl->setViewportSize(IntSize(10, 10));
+    // Ensure visibleLayerRect for layer layer is not empty
+    layer->setPosition(FloatPoint(0, 0));
 
-    EXPECT_FALSE(root->willDrawCalled());
-    EXPECT_FALSE(root->didDrawCalled());
+    EXPECT_FALSE(layer->willDrawCalled());
+    EXPECT_FALSE(layer->didDrawCalled());
 
     EXPECT_TRUE(m_hostImpl->prepareToDraw(frame));
     m_hostImpl->drawLayers(frame);
     m_hostImpl->didDrawAllLayers(frame);
 
-    EXPECT_TRUE(root->willDrawCalled());
-    EXPECT_TRUE(root->didDrawCalled());
+    EXPECT_TRUE(layer->willDrawCalled());
+    EXPECT_TRUE(layer->didDrawCalled());
 
-    EXPECT_FALSE(root->visibleLayerRect().isEmpty());
+    EXPECT_FALSE(layer->visibleLayerRect().isEmpty());
 }
 
 TEST_F(CCLayerTreeHostImplTest, didDrawCalledOnAllLayers)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
-
     m_hostImpl->setRootLayer(DidDrawCheckLayer::create(0));
     DidDrawCheckLayer* root = static_cast<DidDrawCheckLayer*>(m_hostImpl->rootLayer());
 
@@ -534,9 +536,6 @@ private:
 
 TEST_F(CCLayerTreeHostImplTest, prepareToDrawFailsWhenAnimationUsesCheckerboard)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
-
     // When the texture is not missing, we draw as usual.
     m_hostImpl->setRootLayer(DidDrawCheckLayer::create(0));
     DidDrawCheckLayer* root = static_cast<DidDrawCheckLayer*>(m_hostImpl->rootLayer());
@@ -661,8 +660,6 @@ private:
 // https://bugs.webkit.org/show_bug.cgi?id=75783
 TEST_F(CCLayerTreeHostImplTest, blendingOffWhenDrawingOpaqueLayers)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
 
     {
         OwnPtr<CCLayerImpl> root = CCLayerImpl::create(0);
@@ -991,7 +988,6 @@ TEST_F(CCLayerTreeHostImplTest, reshapeNotCalledUntilDraw)
     ReshapeTrackerContext* reshapeTracker = new ReshapeTrackerContext();
     RefPtr<GraphicsContext3D> context = GraphicsContext3DPrivate::createGraphicsContextFromWebContext(adoptPtr(reshapeTracker), GraphicsContext3D::RenderDirectlyToHostWindow);
     m_hostImpl->initializeLayerRenderer(context, adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
 
     CCLayerImpl* root = new FakeDrawableCCLayerImpl(1);
     root->setAnchorPoint(FloatPoint(0, 0));
@@ -1126,9 +1122,6 @@ private:
 
 TEST_F(CCLayerTreeHostImplTest, contextLostAndRestoredNotificationSentToAllLayers)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
-
     m_hostImpl->setRootLayer(ContextLostNotificationCheckLayer::create(0));
     ContextLostNotificationCheckLayer* root = static_cast<ContextLostNotificationCheckLayer*>(m_hostImpl->rootLayer());
 
@@ -1173,9 +1166,6 @@ private:
 
 TEST_F(CCLayerTreeHostImplTest, scrollbarLayerLostContext)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
-
     m_hostImpl->setRootLayer(ScrollbarLayerFakePaint::create(0));
     ScrollbarLayerFakePaint* scrollbar = static_cast<ScrollbarLayerFakePaint*>(m_hostImpl->rootLayer());
     scrollbar->setBounds(IntSize(1, 1));
@@ -1323,9 +1313,6 @@ private:
 
 TEST_F(CCLayerTreeHostImplTest, dontUseOldResourcesAfterLostContext)
 {
-    m_hostImpl->initializeLayerRenderer(createContext(), adoptPtr(new FakeTextureUploader));
-    m_hostImpl->setViewportSize(IntSize(10, 10));
-
     OwnPtr<CCLayerImpl> rootLayer(CCLayerImpl::create(0));
     rootLayer->setBounds(IntSize(10, 10));
     rootLayer->setAnchorPoint(FloatPoint(0, 0));
